------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

May 8 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Bill's wills' psi waves and ghosts' touches no longer damage armor
	* Bill's wills are now immune to gas and can walk through walls
	* Petrus now wears a cloak of electricity resistance and is intrinsically
	  energy resistant
	* Adjusted mages' inventories a little
	* Healing now consumes NP

May 8 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Banana growers no longer attack people 'g'oing on the landing platform
	* Highscore now shows only 40 entries per page, to prevent felist crossing
	  the screen borders
	* Corrected a bug that allowed unarmed attackers to hit a floating eye with
	  another arm even if they had been fainted
	* Golems' bodyparts and corpses now vanish, because they were too expensive
	* Gods are now more demanding

May 8 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Action is terminated when life is saved

May 8 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Go command stops when entering or leaving rooms
	* Explosions don't destroy the edge tiles anymore.

May 7 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Getting killed by an own thunder hammer or Turox now gives a unique message
	* A voluntary action is now terminated if a mage attacks from long range
	* Corrected a bug that caused bone to spoil way too fast

May 7 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Documented 1 idea and 1 bug

May 6 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Biting monsters now capture the severed bodyparts of the enemy
	* Eddies are no longer charmable as this could be abused
	* Corrected a small bug in the square memorized descriptions