@@ -938,8 +938,10 @@ ushort level::TriggerExplosions(ushort MinIndex)
 
 bool level::CollectCreatures(std::vector<character*>& CharacterArray, character* Leader, bool AllowHostiles)
 {
+  ushort c;
+
   if(!AllowHostiles)
-    for(ushort c = 0; c < game::GetTeams(); ++c)
+    for(c = 0; c < game::GetTeams(); ++c)
       if(Leader->GetTeam()->GetRelation(game::GetTeam(c)) == HOSTILE)
 	for(std::list<character*>::const_iterator i = game::GetTeam(c)->GetMember().begin(); i != game::GetTeam(c)->GetMember().end(); ++i)
 	  if((*i)->IsEnabled() && Leader->CanBeSeenBy(*i) && Leader->GetSquareUnder()->CanBeSeenBy(*i, true) && (*i)->CanFollow())
@@ -948,10 +950,19 @@ bool level::CollectCreatures(std::vector<character*>& CharacterArray, character*
 	      return false;
 	    }
 
-  for(ushort c = 0; c < game::GetTeams(); ++c)
+  bool TakeAll = true;
+
+  for(c = 0; c < game::GetTeams(); ++c)
+    if(game::GetTeam(c)->GetEnabledMembers() && Leader->GetTeam()->GetRelation(game::GetTeam(c)) == HOSTILE)
+      {
+	TakeAll = false;
+	break;
+      }
+
+  for(c = 0; c < game::GetTeams(); ++c)
     if(game::GetTeam(c) == Leader->GetTeam() || Leader->GetTeam()->GetRelation(game::GetTeam(c)) == HOSTILE)
       for(std::list<character*>::const_iterator i = game::GetTeam(c)->GetMember().begin(); i != game::GetTeam(c)->GetMember().end(); ++i)
-	if((*i)->IsEnabled() && *i != Leader && Leader->CanBeSeenBy(*i) && Leader->GetSquareUnder()->CanBeSeenBy(*i, true) && (*i)->CanFollow())
+	if((*i)->IsEnabled() && *i != Leader && (TakeAll || (Leader->CanBeSeenBy(*i) && Leader->GetSquareUnder()->CanBeSeenBy(*i, true) && (*i)->CanFollow())))
 	  {
 	    if((*i)->GetAction() && (*i)->GetAction()->IsVoluntary())
 	      (*i)->GetAction()->Terminate(false);
